# reverie-nlp-service

./: Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  reverie-nlp-AutoDeployTrigger-5065ebb5-0aa9-433f-9ade-f6efd56385af.yml
src/: main.py
src/services/: emotions.py  keywords.py  sentiments.py
tests/: load_test.py  test_analysis.py  test_journals.txt
